<resources>
    <string name="app_name">Yjahz</string>
    <string name="language_arabic">Arabic</string>
    <string name="language_english">English</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="network_disconnected_message">Unable to connect Please check your internet connection to continue</string>
    <string name="update_application">Update App</string>
    <string name="message_update_application">A new version of the app is available. Please update to the latest version.</string>
    <string name="something_went_wrong_message">Something went wrong.</string>
    <string name="login">LOGIN</string>
    <string name="email">Email.</string>
    <string name="write_your_email">Write your email</string>
    <string name="write_8_character_at_least">Write 8 character at least</string>
    <string name="password">Password</string>
    <string name="forgot_the_password">Forgot the password ?</string>
    <string name="login_lowercase">Login</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_upper_case">SIGN UP</string>
    <string name="name">Name.</string>
    <string name="write_14_character">Write 14 character</string>
    <string name="write_11_numbers">Write 11 numbers</string>
    <string name="phone_number">Phone Number.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="write_your_password_again">Write your password again</string>
    <string name="sign_up_lower_case">Sign up</string>
    <string name="have_an_account">have an account ?</string>
    <string name="log_in">Log in</string>
    <string name="enter_name">Enter name.</string>
    <string name="very_short_name">Very short name.</string>
    <string name="email_not_valid">Email not valid.</string>
    <string name="enter_email">Enter Email.</string>
    <string name="enter_a_valid_phone">Enter a valid Phone.</string>
    <string name="enter_phone_number">Enter Phone number.</string>
    <string name="enter_password">Enter password.</string>
    <string name="password_should_be_8_characters_at_least">Password should be 8 characters at least.</string>
    <string name="passwords_not_matches">Passwords not matches.</string>
    <string name="home">Home</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="are_you_want_to_confirm_logout">Are you want to confirm logout?</string>
    <string name="confirm">Confirm</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="choose_language">Choose Language</string>
    <string name="main_fragment_hello">Hello %1$s</string>
    <string name="no_address_found">There is no address</string>
    <string name="search_for_fav_food">Search for fav food ...</string>
    <string name="view_all">View all</string>
    <string name="categories">Categories.</string>
    <string name="popular_now">Popular now.</string>
    <string name="trending_now">Trending now.</string>
    <string name="retry">Retry</string>
    <string name="distance_km">%1$s Km</string>
    <string name="unknown">Unknown</string>
    <string name="unable_to_detect_location">Unable to detect location</string>
    <string name="permission_denied">permission denied</string>
</resources>